# 30_days_of_dagster

./: .gitignore  README.md  day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  pyproject.toml
30_days_dagster/: pyproject.toml  setup.cfg
30_days_dagster/30_days_dagster/: 02_day.py  03_day.py  03_day_automation_condition.py  04_day.py  05_day.py  06_day.py  10_day.py  12_day.py  12_day_orders.py  day_one.py
30_days_dagster/data/: orders.csv
christians_solutions/: README.md  pyproject.toml  setup.py
christians_solutions/30_days_dagster/: 01_day.py  03_day_automation_condition.py  04_day.py  05_day.py  05_day_create_csv.py  06_day.py  07_day_direct.py  07_day_io.py  08_day.py  09_day.py  10_day.py  11_day.py  12_day.py  12_day_orders.py  15_day.py  16_day.py  17_day.py  Untitled-1.ipynb  resource_scratch.py
christians_solutions/data/: orders.csv  orders_raw.csv  orders_summary.csv
data_prod/: orders.csv  orders_raw.csv  orders_summary.csv
solutions/: day01.md  day01.py  day02.md  day02.py  day03.md  day03.py  day04.md  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.md  day16.py  day17.py  day18.md  external_code.py
tmp__2610fp/history/: runs.db
tmp__2610fp/schedules/: schedules.db
tmpboc1vjs4/history/: runs.db
tmpboc1vjs4/schedules/: schedules.db
tmprnr078o4/history/: runs.db
tmprnr078o4/schedules/: schedules.db
tmpsvwu4ngc/history/: runs.db
(+32 files in other folders)
